first working version

--- a/is.html
+++ b/is.html
@@ -5,12 +5,11 @@
 	<script type="text/javascript" src="is.js"></script>
 </head>
 <body>
-	<h1 id="first">One day,</h1>
-	<h1>my proper website</h1>
-	<h1>will have</h1>
-	<h1>enough content</h1>
-	<h1>to warrent</h1>
-	<h1>the legitimate</h1>
-	<h1>use of</h1>
-	<h1>infinite scrolling</h1>
+	<div id="wrapper">
+		<h1 id="first">One day,</h1>
+		<h1>my proper website</h1>
+		<h1>will have</h1>
+		<h1>enough content</h1>
+		<h1>to warrent</h1>
+	</div>
 </body>
